fix on mobile view

--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -50,12 +50,13 @@ body {
         border-right: none;
         border-bottom: 1px solid #ccc;
         border-bottom-left-radius: 0;
+        height: 50%;
     }
 }
 
 .users-list-container {
-    height: 100%;
-    overflow-y: scroll;
+    height: 60%;
+    overflow-y: auto;
 }
 
 .users-list h2 {
@@ -74,6 +75,7 @@ body {
     align-items: center;
     margin-bottom: 8px;
     cursor: pointer;
+    height: fit-content;
 }
 
 .user-item.active {
@@ -108,48 +110,44 @@ body {
     box-sizing: border-box;
     border-top-right-radius: 8px;
     border-bottom-right-radius: 8px;
-}
-
-.message {
-    margin-bottom: 5px;
-    border-radius: 5px;
+    overflow: hidden;
 }
 
 #chat-messages {
     flex: 1;
     display: flex;
     flex-direction: column;
-    overflow-y: scroll;
+    overflow-y: auto;
     margin-bottom: 20px;
 }
 
-.message p {
-    padding: 10px 15px;
-    border-radius: 15px;
-    word-wrap: break-word;
-    max-width: 70%;
-}
 
-.user-item span.nbr-msg {
-    margin-left: 10px;
-    background-color: #f8fa6f;
-    color: white;
-    padding: 5px;
-    width: 10px;
-    border-radius: 50%;
-    height: 10px;
+.message {
+    margin-bottom: 5px;
+    border-radius: 5px;
+    padding: 0 10px;
+    max-width: 70%;
+    word-wrap: normal;
 }
 
 .sender {
     background-color: #3498db;
     color: #fff;
     align-self: flex-end;
+    border-radius: 15px 15px 0 15px;
 }
 
 .receiver {
     background-color: #ecf0f1;
     color: #333;
     align-self: flex-start;
+    border-radius: 15px 15px 15px 0;
+}
+
+.message p {
+    border-radius: 15px;
+    word-wrap: normal;
+    max-width: 70%;
 }
 
 .message-input {
@@ -165,6 +163,21 @@ body {
     margin-right: 10px;
 }
 
+.user-item span.nbr-msg {
+    margin-left: 10px;
+    background-color: #f8fa6f;
+    color: white;
+    padding: 5px;
+    width: 10px;
+    border-radius: 50%;
+    height: 10px;
+}
+
+.user-item.notification {
+    background-color: #f1c40f;
+    color: #333;
+}
+
 .message-input button {
     padding: 10px;
     border: none;
@@ -172,6 +185,12 @@ body {
     color: #fff;
     border-radius: 5px;
     cursor: pointer;
+}
+
+
+.user-controls {
+    display: flex;
+    flex-direction: column;
 }
 
 .user-form {
